CHATS_SIT/force-app/main/default/objects/T_INDIV_EMPLMT_VERIF__c.object
<CustomObject>
    <description>Verification of employment tracking</description>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_EMPLMT_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employment ID</description>
        <label>Employment ID</label>
        <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
        <relationshipLabel>Employment Verifications</relationshipLabel>
        <relationshipName>Employment_Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Employment Verification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employment Verification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Verification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rcrds_only_created_for_EMPL_RcrdType</fullName>
        <active>true</active>
        <description>Records can only be created for Employment Record Type</description>
        <errorConditionFormula>AND(NOT( ISBLANK(IDN_EMPLMT_INDIV__c) ),
    IDN_EMPLMT_INDIV__r.RecordType.Name &lt;&gt; &quot;Employment&quot;
)</errorConditionFormula>
        <errorMessage>Records can only be created for Employment Record Type</errorMessage>
    </validationRules>
</CustomObject>