CHATS_SIT/force-app/main/default/objects/T_INDIV_EMPLMT_VERIF__c/validationRules/Rcrds_only_created_for_EMPL_RcrdType.validationRule-meta.xml
<ValidationRule>
    <fullName>Rcrds_only_created_for_EMPL_RcrdType</fullName>
    <active>true</active>
    <description>Records can only be created for Employment Record Type</description>
    <errorConditionFormula>AND(NOT( ISBLANK(IDN_EMPLMT_INDIV__c) ),
    IDN_EMPLMT_INDIV__r.RecordType.Name &lt;&gt; &quot;Employment&quot;
)</errorConditionFormula>
    <errorMessage>Records can only be created for Employment Record Type</errorMessage>
</ValidationRule>